# falling_project

./: README.md
TSDFresult/TSDF/: TSDF_falling_small_0.1g.ply  TSDF_falling_small_1g.ply
evaluation_approximation/pcltest/: CMakeLists.txt  super8points.txt
evaluation_approximation/pcltest/src/: icp.cpp  ply2pcd.cpp
modify_code/simulation/: moveBoth.py  msg_check.py  my_poseinobj_plugin.cpp  pose_plugin.cpp  poseinobj_plugin.cpp
modify_code/supereight/: DenseSLAMSystem.cpp
object_model/: cube.dae  duck_small.dae  rock3.dae
original_third_party/simulation/gazebo_minimal_example/: CMakeLists.txt  package.xml
original_third_party/simulation/gazebo_minimal_example/launch/: sim_depth_camera.launch
original_third_party/simulation/gazebo_minimal_example/models/box/: model.config  model.sdf
original_third_party/simulation/gazebo_minimal_example/models/depth_camera/: model.sdf
original_third_party/simulation/gazebo_minimal_example/src/: depth_plugin.cpp  pose_plugin.cpp
original_third_party/simulation/gazebo_minimal_example/worlds/: sim_depth_camera.world
used_code/gazebo_minimal_example/: CMakeLists.txt  README.md
used_code/gazebo_minimal_example/launch/: sim_depth_camera.launch
used_code/gazebo_minimal_example/models/depth_camera/: model.sdf
used_code/gazebo_minimal_example/models/duck/: duck.dae  model.config  model.sdf
used_code/gazebo_minimal_example/models/duck/meshes/: duck.dae
used_code/gazebo_minimal_example/scripts/: circle.py  duckMove.py  moveCamera.py  objInCam.py
used_code/gazebo_minimal_example/scripts/old/: circle.py
used_code/gazebo_minimal_example/src/: duck_plugin.cpp
used_code/gazebo_minimal_example/worlds/: sim_depth_camera.world
used_code/supereight_ros/config/: config_gazebo_example.yaml
used_code/supereight_ros/include/supereight_ros/: supereight_ros.hpp
used_code/supereight_ros/launch/: supereight_ros_gazebo_example.launch
used_code/supereight_ros/src/: supereight_ros.cpp  supereight_ros_node.cpp  utilities.cpp
used_code/supereight_ros/supereight/se_core/include/se/: octree.hpp
used_code/supereight_ros/supereight/se_core/include/se/algorithms/: meshing.hpp
used_code/supereight_ros/supereight/se_core/include/se/functors/: projective_functor.hpp
used_code/supereight_ros/supereight/se_denseslam/src/: DenseSLAMSystem.cpp
used_code/supereight_ros/supereight/se_voxel_impl/src/MultiresTSDF/: MultiresTSDF_mapping.cpp
used_code/supereight_ros/supereight/se_voxel_impl/src/OFusion/: OFusion_mapping.cpp
used_code/supereight_ros/supereight/se_voxel_impl/src/TSDF/: TSDF_mapping.cpp
